# spaceship-titanic

./: .gitignore  mapping.py  pyproject.toml  sps-t-lgbm.ipynb  sps-t-rf.ipynb  sps-t.ipynb  sps_t.ipynb  sps_t_v2.ipynb  sps_t_v3.ipynb
data/: results_kNN.csv  results_rf.csv
data/.ipynb_checkpoints/: results-checkpoint.csv  source-checkpoint.txt
input/.ipynb_checkpoints/: results_kNN-checkpoint.csv
working/: sps-t-lgbm.ipynb  submission.csv
working/.ipynb_checkpoints/: sps-t-lgbm-checkpoint.ipynb  sps-t-rf-checkpoint.ipynb
